# tokimo-app-pt-subscription

./: .gitignore  Cargo.toml  README.md  lefthook.yml  tokimo-app.toml
.github/workflows/: ci.yml
docs/: subscription-matcher.ts  subscription.service.ts
migrations/: 20260614010001__init.up.sql
skills/download/: SKILL.md
skills/subscribe/: SKILL.md
src/: app_server.rs  cli.rs  cli_types.rs  error.rs  lib.rs  main.rs
src/db/: mod.rs
src/db/entities/: download_clients.rs  download_records.rs  mod.rs  pt_sites.rs  subscriptions.rs
src/db/repos/: download_client_repo.rs  mod.rs  system_config_repo.rs
src/handlers/: mod.rs  user.rs
src/services/: mod.rs  torrent_download.rs
src/shared/: categories.rs  episode_parser.rs  filter_options.rs  mod.rs  path.rs  torrent_parser.rs
src/subscriptions/: router.rs
src/subscriptions/handlers/: categories.rs  mod.rs  pt_sites.rs  search.rs  subscription.rs  traffic_manage.rs
src/subscriptions/repos/: mod.rs  pt_site_repo.rs  subscription_repo.rs  traffic_manage_repo.rs
src/subscriptions/services/: execute.rs  mod.rs  pt_search.rs  pt_user_info.rs  scorer.rs
tests/: export_bindings.rs
ui/: .pnpmfile.cjs  package.json
ui/src/: index.tsx
ui/src/api/: client.ts
ui/src/components/: AppWindow.tsx  ClientFormWindow.tsx  DownloadClientsPage.tsx  DownloadConfirmWindow.tsx  LogTerminal.tsx  PtResultsSection.tsx  PtSiteFormWindow.tsx  PtSitesPage.tsx  SearchPage.tsx  Sidebar.tsx  SubscriptionFormWindow.tsx  SubscriptionLogsWindow.tsx  SubscriptionsPage.tsx  TorrentCard.tsx  TorrentListWindow.tsx  search-api.ts  search-utils.ts
ui/src/i18n/: en-US.ts  zh-CN.ts
ui/ui/: package.json
ui/ui/src/: index.tsx
ui/ui/src/api/: client.ts
ui/ui/src/components/: AppWindow.tsx  ClientFormWindow.tsx  DownloadClientsPage.tsx  TorrentListModalWindow.tsx  TorrentListPanel.tsx
ui/ui/src/i18n/: en-US.ts  index.ts  zh-CN.ts
